--- a/docs/front/react/思考.md
+++ b/docs/front/react/思考.md
@@ -42,7 +42,7 @@ console.log(...data); //报错
 
 ### 5、react中ref创建的三种形式及问题
 >   - 1：字符串形式`<input ref='inputRef' />` 已经弃用，在react版本`16.8`之后
->   - 1：回调形式：`<input ref={ref => this.inputRef}/>` , 此回调内联形式 会造成 ref回调 调用2次；
+>   - 2：回调形式：`<input ref={ref => this.inputRef}/>` , 此回调内联形式 会造成 ref回调 调用2次；
       原因：每次渲染执行到这里需要先将之前的ref清空，因为不确定是否还需要此ref，比如删除操作
       解决办法：是将内联形式写个自定义方法
 >   - 3：createRef形式：类中定义`myRef = React.createRef()`,标签或组件内使用`ref={this.myRef}`
@@ -52,10 +52,10 @@ console.log(...data); //报错
 >   - 2：为了更高效（react中的事件是tongguo事件委托方式处理的(委托给最外层的元素)）,比如冒泡
 
 ### 7、react中事件绑定的带参数的写法及原因
-- 高阶函数：如果一个函数符合最下面2个规范中的任何一个，那么该函数就是高阶函数
-  - 1：若A函数，接收的参数是一个函数，那么A就可以称之为高阶函数
-  - 2：若A函数，调用的返回值依然是一个函数，那么A就可以称之为高阶函数
-- 函数柯里化：通过函数调用继续返回函数的方式，实现多次接收参数最后统一处理的函数编码形式
+>   - 高阶函数：如果一个函数符合最下面2个规范中的任何一个，那么该函数就是高阶函数
+>     - 1：若A函数，接收的参数是一个函数，那么A就可以称之为高阶函数
+>     - 2：若A函数，调用的返回值依然是一个函数，那么A就可以称之为高阶函数
+>   - 函数柯里化：通过函数调用继续返回函数的方式，实现多次接收参数最后统一处理的函数编码形式
 ```js
 //方法1：给onChange绑定一个自执行的函数，且该函数返回一个回调函数，用来接收event对象，此方式为 高阶函数
 changeValue = (key) =>{
@@ -84,4 +84,19 @@ changeValue = (key) =>{
         }
     }
     sum(1)(2)(3); //此为函数柯里化写法
+```
+
+### 8、react中的diff算法
+>   - 逐层对比，最小的粒度是标签
+>   - key的作用是新旧虚拟DOM比较的标识
+>       - 新的虚拟DOM会先比较旧的虚拟DOM中是否存在相同的key，如果存在，则继续比较内容；若内容一样，则直接使用之前的真实DOM；如果不存在，则生成新的真实DOM，
+>       - 因此，若使用index作为key，当有新增或删除操作的时候，原数组的下标改变了，当新旧虚拟DOM去比较的时候，新的虚拟DOM虽然可能在旧的虚拟DOM中找到了相同的key，但是两个虚拟DOM相同key对应的内容却不是一样的，这样子仍旧需要生成新的真实DOM
+>       - 如果包含输入类的DOM`(比如input)`，由于虚拟`input`DOM中没有value属性，比较虚拟`input`DOM也没有key标识，所以会使用相同的key对应的虚拟DOM下的真实的input DOM
+
+### 9、react中的样式模块化
+>   - 目的：防止css命名冲突，推荐使用less编写样式替代
+```js
+//定义`index.module.css` 必须加module.css
+import hello from './index.module.css'; //引入
+<div className={hello._div} /> //使用
 ```
