--- a/docs/front/react/思考.md
+++ b/docs/front/react/思考.md
@@ -7,7 +7,7 @@
 >   - 而自定义方法 是放在了类的原型对象上，供实例使用，onClick={this.自定义方法名},其实是 顺着原型链向上查找
 >   找到了之后把这个 自定义方法的引用 作为了 onClick事件的回调，所以当点击时候 再调用自定义方法，是通过点击直接去调用了方法本身，而不是通过实例化对象去调用的，因此this指向的应该是window，而由于在类中的方法自动开启了局部严格模式，所以方法中的this指向了undefined
 
-```js
+```jsx
 class Person{
     constructor(name, age){
         this.name = name;
@@ -27,7 +27,7 @@ console.log(_speak()); //此时_speak()调用者是_speak常量, 因此输出thi
 >   组件实例化对象继承自React.Commonpent, setState方法在`React.Commonpent`的原型对象上
 
 ### 3、react中可以在组件上使用展开运算符，而原生JS不可以
-```js
+```jsx
 //react中
 let data = { name:'nmf', age:'26' }
 ReactDOM.render(<Home {...data}>) //在这里{}相当于传入一个表达式
@@ -41,22 +41,22 @@ console.log(...data); //报错
 >   - 且super调用时，props可以不接收，不传值，若不接收或者接收不传值，则this.props为undefined
 
 ### 5、react中ref创建的三种形式及问题
->   - 1：字符串形式`<input ref='inputRef' />` 已经弃用，在react版本`16.8`之后
->   - 2：回调形式：`<input ref={ref => this.inputRef}/>` , 此回调内联形式 会造成 ref回调 调用2次；
+>   1. 字符串形式`<input ref='inputRef' />` 已经弃用，在react版本`16.8`之后
+>   2. 回调形式：`<input ref={ref => this.inputRef}/>` , 此回调内联形式 会造成 ref回调 调用2次；
       原因：每次渲染执行到这里需要先将之前的ref清空，因为不确定是否还需要此ref，比如删除操作
       解决办法：是将内联形式写个自定义方法
->   - 3：createRef形式：类中定义`myRef = React.createRef()`,标签或组件内使用`ref={this.myRef}`
+>   3. createRef形式：类中定义`myRef = React.createRef()`,标签或组件内使用`ref={this.myRef}`
 
 ### 6、react中onClick等事件为何要重写为驼峰式的？
->   - 1：为了更好地兼容性（react中使用的是自定义合成事件，而不是原生的DOM事件）
->   - 2：为了更高效（react中的事件是tongguo事件委托方式处理的(委托给最外层的元素)）,比如冒泡
+>   1. 为了更好地兼容性（react中使用的是自定义合成事件，而不是原生的DOM事件）
+>   2. 为了更高效（react中的事件是tongguo事件委托方式处理的(委托给最外层的元素)）,比如冒泡
 
 ### 7、react中事件绑定的带参数的写法及原因
 >   - 高阶函数：如果一个函数符合最下面2个规范中的任何一个，那么该函数就是高阶函数
->     - 1：若A函数，接收的参数是一个函数，那么A就可以称之为高阶函数
->     - 2：若A函数，调用的返回值依然是一个函数，那么A就可以称之为高阶函数
+>     1. 若A函数，接收的参数是一个函数，那么A就可以称之为高阶函数
+>     2. 若A函数，调用的返回值依然是一个函数，那么A就可以称之为高阶函数
 >   - 函数柯里化：通过函数调用继续返回函数的方式，实现多次接收参数最后统一处理的函数编码形式
-```js
+```jsx
 //方法1：给onChange绑定一个自执行的函数，且该函数返回一个回调函数，用来接收event对象，此方式为 高阶函数
 changeValue = (key) =>{
     return (event) =>{
@@ -94,9 +94,12 @@ changeValue = (key) =>{
 >       - 如果包含输入类的DOM`(比如input)`，由于虚拟`input`DOM中没有value属性，比较虚拟`input`DOM也没有key标识，所以会使用相同的key对应的虚拟DOM下的真实的input DOM
 
 ### 9、react中的样式模块化
->   - 目的：防止css命名冲突，推荐使用less编写样式替代
-```js
+>   目的：防止css命名冲突，推荐使用less编写样式替代
+```jsx
 //定义`index.module.css` 必须加module.css
 import hello from './index.module.css'; //引入
 <div className={hello._div} /> //使用
 ```
+
+### 10、react路由简单原理
+>   当跳转到某个路由后，浏览器的路由地址发生改变；前端路由器监测到这个改变，从而切换页面
