--- a/docs/front/react/思考.md
+++ b/docs/front/react/思考.md
@@ -103,3 +103,75 @@ import hello from './index.module.css'; //引入
 
 ### 10、react路由简单原理
 >   当跳转到某个路由后，浏览器的路由地址发生改变；前端路由器监测到这个改变，从而切换页面
+
+### 11、redux的基本流程理解
+redux主要包括：store(存储持久化状态)、action(动作及逻辑处理)、reducer(返回新的state)
+- 在组件内通过store的dispatch方法派发一个action，告知将要发生改变的类型和数据
+- store告知reducer将要发生改变的类型和数据，进行匹配，返回新的数据到store的state里
+- store接收到新的数据，在组件内通过store的subscribe方法检测redux中state的变化，并重新render页面
+>   redux的核心是store，通过redux库的```createStore()```创建，createStore()返回一个对象，如下：
+```js
+{
+    dispatch: ƒ (action) //在组件内派发action，从而通过store告知reducer将要发生的行为
+    getState: ƒ getState() //获取store里的状态(state)
+    replaceReducer: ƒ replaceReducer(nextReducer)
+    subscribe: ƒ subscribe(listener) //订阅，可以用来监听由action触发reducer时引起的状态的改变，从而刷新页面状态
+    Symbol(observable)
+    [[Prototype]]: Object
+}
+```
+
+>   同时createStore接收两个参数
+>   - 第一个参数是一个reducer函数，当项目中有多个reducer时，需要使用redux库的```combineReducers```函数将多个reducer进行合并
+combineReducers本身接收一个对象，对象内包括各个模块的reducer函数，combineReducers()本身仍旧返回一个reducer函数
+> ```js
+>    import { createStore } from 'redux'
+>    export default createStore(combineReducers({
+>        count,
+>        persons
+>    }))
+> ```
+>   - 第二个参数是用来处理异步action的，依赖redux库的```applyMiddleware```中间件以及 redux-thunk库的```thunk```实现，可以使dispatch不仅支持对象还支持函数
+> ```js
+>    import { createStore, applyMiddleware } from 'redux'
+>    export default createStore(reducer , applyMiddleware(thunk))
+> ```
+> ```js
+>    import {INCREMENT,DECREMENT} from './constant'
+>    //同步action，就是指action的值为Object类型的一般对象
+>    export const createIncrementAction = data => ({type:INCREMENT,data})
+>    
+>    //异步action，就是指action的值为函数,异步action中一般都会调用同步action，异步action不是必须要用的。
+>    export const createIncrementAsyncAction = (data,time) => {
+>    	return (dispatch)=>{
+>    		setTimeout(()=>{
+>    			dispatch(createIncrementAction(data))
+>    		},time)
+>    	}
+>    }
+> ```
+
+>   ```react-redux```的作用：
+>   - 使用```connect```将store和组件建立起连接, 并且可以简化mapDispatchToProps
+>   - 提供```Provider```组件，将跟组件包裹，可以自动把store注入到各个需要store的容器组件
+>   - 无需使用subscribe方法在render跟组件时监测redux状态
+```js
+import CountUI from '../../components/Count' //引入Count的UI组件
+import { createIncrementAction, createIncrementAsyncAction } from '../../redux/count_action' //引入action
+import {connect} from 'react-redux' //引入connect用于连接UI组件与redux
+/*  1.mapStateToProps函数返回的是一个对象；
+	2.返回的对象中的key就作为传递给UI组件props的key,value就作为传递给UI组件props的value
+	3.mapStateToProps用于传递状态   */
+function mapStateToProps(state){ return {count:state} }
+/*  1.mapDispatchToProps函数返回的是一个对象；
+	2.返回的对象中的key就作为传递给UI组件props的key,value就作为传递给UI组件props的value
+	3.mapDispatchToProps用于传递操作状态的方法  */
+function mapDispatchToProps(dispatch){
+	return {
+		jia:number => dispatch(createIncrementAction(number)),
+		jiaAsync:(number,time) => dispatch(createIncrementAsyncAction(number,time)),
+	}
+}
+//使用connect()()创建并暴露一个Count的容器组件
+export default connect(mapStateToProps,mapDispatchToProps)(CountUI)
+```
