--- a/docs/markdown/其他.md
+++ b/docs/markdown/其他.md
@@ -1,5 +1,17 @@
-# 进阶
+# VuePress内置组件
 此章节是基于vuepress的md文件的扩展语法
+
+## 图标
+**输入**
+```md
+- VuePress - <Badge type="tip" text="v2" vertical="top" />
+- VuePress - <Badge type="warning" text="v2" vertical="middle" />
+- VuePress - <Badge type="danger" text="v2" vertical="bottom" />
+```
+**输出**
+- VuePress - <Badge type="tip" text="v2" vertical="top" />
+- VuePress - <Badge type="warning" text="v2" vertical="middle" />
+- VuePress - <Badge type="danger" text="v2" vertical="bottom" />
 
 ## 提示
 **输入**
