--- a/docs/after/mongodb/基础.md
+++ b/docs/after/mongodb/基础.md
@@ -9,7 +9,7 @@
 
 ## 启动Mongodb服务/连接数据库
 若未配置全局变量，所有操作应在`/bin`目录下进行。
-- `mongod --dbpath E:\mongodb\data\db`：启动mongoDB服务
+- `mongod --dbpath E:\mongodb\data\db`：启动mongoDB服务（若已经指定过dbpath，则启动数据库可省略--dbptah路径）
 - `mongo`：连接数据库
 
 ## 在命令行中操作
@@ -57,6 +57,211 @@
     - `db.集合名称.update({ username: 'nmf' }, { $set: {age: '200'} })`：$set覆盖，$inc运算(正值加法,负值剑法)
 4. 删除文档
     - `db.集合名称.remove({ name: 'xx' })`：空对象{}删除该集合下所有的文档，否则为指定删除
+
+### 设置登录权限
+::: tip 注意：
+之所以要设置登录权限是因为 mongodb 默认连接是不需要权限的，如果将数据库部署到外网上，则极有可能被黑客攻击。\
+`All your data was backed up from your server. You need to email us at rambler+19yfh@onionmail.org to recover your data. If you dont contact us we will reach the General Data Protection Regulation, GDPR,and notify them that you store user data in an open form that is not safe. Under the rules of the law, you face a heavy fine or arrest and your database dump will be deleted from our server forever!`
+:::
+
+1. 创建 admin 数据库 超级管理员用户名、密码、角色
+```js
+//切换到 admin 数据库，创建超级管理员账号密码
+> use admin 
+// 可以查看下当前数据库下的集合列表
+> db.getCollectionNames() // [ "system.users", "system.version" ]
+> show collections // system.users system.version
+// 在 admin 数据库里创建一个用户 role是角色
+> db.createUser({user: 'root', pwd: 'root', roles: ['root']})
+// 此时可以查看当前数据库下的 用户权限 列表
+> show users
+{
+    "_id" : "admin.niumengfei",
+    "userId" : UUID("7acf1068-2adc-445b-b308-96159ed878d1"),
+    "user" : "niumengfei",
+    "db" : "admin",
+    "roles" : [{    
+        "role" : "root",
+        "db" : "admin"
+    }],
+    "mechanisms" : ["SCRAM-SHA-1", "SCRAM-SHA-256"]
+}
+```
+2. 创建 sakuras 数据库 普通用户名、密码
+```js
+// 切换到sakuras数据库
+> use sakuras
+// 可以查看下sakuras数据库的集合列表
+> db.getCollectionNames() // [ "articles", "users" ]
+> show collections // articles users
+// 在 sakuras 数据库里创建一个用户app，只可以进行读写操作 
+> db.createUser({user:'app',pwd:'app',roles:[{role:'readWrite',db:'sakuras'}]})
+// 此时可以查看当前数据库 sakuras 下的用户权限列表
+{
+    "_id" : "sakuras.app",
+    "userId" : UUID("9d8a46d3-4865-4abc-aae6-cf4c9dab68cf"),
+    "user" : "app",
+    "db" : "sakuras",
+    "roles" : [{
+        "role" : "readWrite",
+        "db" : "sakuras"
+    }],
+    "mechanisms" : ["SCRAM-SHA-1", "SCRAM-SHA-256"]
+}
+```
+- PS: roles属性是设置该账号对mongoDB数据库的权限，mongodb 一共有哪些权限:
+
+<details>
+<summary>显示/隐藏内容</summary>
+
+```txt
+ 1. 数据库用户角色：read、readWrite; 
+
+ 2. 数据库管理角色：dbAdmin、dbOwner、userAdmin； 
+
+ 3. 集群管理角色：clusterAdmin、clusterManager、clusterMonitor、hostManager；
+
+ 4. 备份恢复角色：backup、restore；
+
+ 5. 所有数据库角色：readAnyDatabase、readWriteAnyDatabase、userAdminAnyDatabase、dbAdminAnyDatabase
+
+ 6. 超级用户角色：root 
+
+ // 这里还有几个角色间接或直接提供了系统超级用户的访问（dbOwner 、userAdmin、userAdminAnyDatabase）
+
+ 7. 内部角色：__system
+
+ read:允许用户读取指定数据库
+
+ readWrite:允许用户读写指定数据库
+
+ dbAdmin：允许用户在指定数据库中执行管理函数，如索引创建、删除，查看统计或访问system.profile
+
+ userAdmin：允许用户向system.users集合写入，可以找指定数据库里创建、删除和管理用户
+
+ clusterAdmin：只在admin数据库中可用，赋予用户所有分片和复制集相关函数的管理权限。
+
+ readAnyDatabase：只在admin数据库中可用，赋予用户所有数据库的读权限
+
+ readWriteAnyDatabase：只在admin数据库中可用，赋予用户所有数据库的读写权限
+
+ userAdminAnyDatabase：只在admin数据库中可用，赋予用户所有数据库的userAdmin权限
+
+ dbAdminAnyDatabase：只在admin数据库中可用，赋予用户所有数据库的dbAdmin权限。
+
+ root：只在admin数据库中可用。超级账号，超级权限
+```
+</details>
+
+
+3. 修改 mongod.cfg 文件 \
+将 security：authorization 设置为 true，mongod.cfg文件详情如下：
+<details>
+<summary>显示/隐藏内容</summary>
+
+```js
+## content
+systemLog: 
+  destination: file #MongoDB发送所有日志输出的目标指定为文件
+  logAppend: true #当mongos或mongod实例重新启动时，mongos或mongod会将新条目附加到现有日志文件的末尾。
+  path: /www/server/mongodb/log/config.log #mongod或mongos应向其发送所有诊断日志记录信息的日志文件的路径
+ 
+# Where and how to store data.
+storage:
+  dbPath: /www/server/mongodb/data #mongod实例存储其数据的目录。storage.dbPath设置仅适用于mongod。
+  directoryPerDB: true
+
+  journal: #启用或禁用持久性日志以确保数据文件保持有效和可恢复。
+    enabled: true
+# how the process runs
+processManagement:
+  fork: true #启用在后台运行mongos或mongod进程的守护进程模式。
+  pidFilePath: /www/server/mongodb/log/configsvr.pid #指定用于保存mongos或mongod进程的进程ID的文件位置，其中mongos或mongod将写入其PID
+ 
+# network interfaces
+net:
+  port: 27017 #绑定的端口
+  bindIp: 0.0.0.0 #服务实例绑定的IP 注意ip必须存在否启动不了mongoDB
+ 
+#operationProfiling:
+#replication:
+#    replSetName: bt_main   
+security:
+  authorization: enabled #开启授权认证
+  #javascriptEnabled: false
+
+#sharding:
+#    clusterRole: shardsvr
+```
+</details>
+
+4. 退出mongo服务，停止服务，卸载服务
+    ```js
+    // 以下是window环境下命令：
+    停止服务：net stop mongodb
+    卸载服务：mongod --remove
+    // 以下是nginx环境下命令
+    ```
+
+5. 重启mongo服务
+    ```js
+    > net start mongodb
+    ```
+
+6. shell 工具使用账号密码连接数据库
+```js
+> mongo -u "root" -p "root" --authenticationDatabase "admin"
+// 如果不使用账号密码，虽然可以连接到 mongodb 服务，但是无法操作数据库，例如
+> use admin
+switched to db admin
+> show dbs
+> show users
+    uncaught exception: Error: command usersInfo requires authentication : // 错误:命令usersInfo需要认证
+    // ...
+```
+7. nodejs 使用账号密码连接数据库
+```js
+const mongoose = require('mongoose'); //数据库
+
+const dbPath = '127.0.0.1:27017/sakuras'; //默认连接服务器数据库 数据库端口可省略，默认27017
+const dbUsername = "sakuras"; // 数据库管理员连接账号
+const dbPassword = "sakuras"; // 数据库管理员的密码
+
+// 启动数据库 插入集合和数据，数据库会自动创建
+mongoose.connect(`mongodb://${dbUsername}:${dbPassword}@${dbPath}`); //通过本地连接远程数据库
+
+// 如果用户名密码错误，则报错：
+    Notifications are disabled
+    Reason: DisabledForApplication Please make sure that the app idN oitsi fsiecta tcioornrse catrley .disaCbolmemdanRde aLisneo:n 
+```
+
+::: tip 注意
+在 nodejs 后端服务里 连接到某个具体数据库时候，必须用当前数据库下的账号密码连接 \
+具体用户列表可以通过 `show users` 查询
+:::
+
+
+<!-- 参考：[mongoDB数据库设置账号密码验证](https://blog.csdn.net/gwypy/article/details/118889829) -->
+
+
+#### 权限相关其他命令行
+- 查看集合名称 `show collections`
+```js
+// admin
+> show collections // system.users system.version
+> db.system.users.find().pretty() // pretty 美观返回值 查询所有数据库内的用户
+```
+- 查看密码是否正确
+```js
+> use admin
+> db.auth('niumengfei', '123')
+> 1 // 1 代表正确，0 代表密码错误
+```
+- 修改用户名密码
+```js
+> use admin
+> db.changeUserPassword('niumengfei', '456')
+```
 
 ## 在NodeJS中使用mongodb
 ### 基于`npm mongodb`
