--- a/docs/front/applet/01-vx.md
+++ b/docs/front/applet/01-vx.md
@@ -1,4 +1,140 @@
 # 微信小程序开发
 
-## 介绍
-[微信小程序开发文档](https://developers.weixin.qq.com/miniprogram/dev/framework/)
+## 起步
+
+[微信小程序开发文档](https://developers.weixin.qq.com/miniprogram/dev/framework/) \
+[微信公众平台](https://mp.weixin.qq.com/)
+
+## [全局配置](https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/app.html)
+
+## [全局方法](https://developers.weixin.qq.com/miniprogram/dev/reference/api/App.html)
+### Page
+微信小程序中的 Page 方法是用于定义页面的构造函数。在小程序中，每个页面都需要对应一个 Page 实例，通过 Page 方法可以创建这个实例并设置页面的初始数据、生命周期函数、事件处理函数等。
+具体来说，Page方法的作用如下：
+
+- 定义页面的构造函数：使用Page方法可以创建一个页面实例，该实例包含了页面的所有属性和方法。
+
+- 设置页面的初始数据：通过data属性设置页面的初始数据，这些数据可以在页面中动态渲染。
+
+- 设置页面的生命周期函数：通过onLoad、onShow、onHide、onUnload等生命周期函数，可以在不同的生命周期阶段执行相应的逻辑。
+
+- 设置页面的事件处理函数：通过bindtap、bindinput等事件处理函数，可以响应用户的交互操作。
+
+- 设置页面的其他属性和方法：通过setData、getCurrentPages等属性和方法，可以获取当前页面的状态、进行数据更新等操作。
+
+## UI 组件库
+[Weui-Wxss](https://github.com/Tencent/weui-wxss/)：一套同微信原生视觉体验一致的基础样式库 `14.6k star` \
+[Vant Weapp](https://vant-contrib.gitee.io/vant-weapp/#/home)：一个轻量、可靠的移动端组件库 `16.7k star` \
+[Wux Weapp](https://github.com/wux-weapp/wux-weapp)：一套组件化、可复用、易扩展的微信小程序 `4.9k star` \
+[iView Weapp](http://inmap.talkingdata.com/wx/index_prod.html)：一套高质量的微信小程序 UI 组件库 `6.4k star` \
+[Color UI](https://github.com/weilanwl/coloruicss)：鲜亮的高饱和色彩，专注视觉的小程序组件库 `11.7k star` \
+[weui-miniprogram](https://github.com/wechat-miniprogram/weui-miniprogram)：一套基于样式库weui-wxss开发的小程序扩展组件库 `1.8k star`
+
+## 开发框架
+[wepy](https://github.com/Tencent/wepy)：一款让小程序支持组件化开发的框架 `22.1k star`
+
+## 常见问题
+### 1. 如何开启全局分享
+微信小程序没有全局分享配置，页面开启分享功能必须要在页面中定义分享事件函数 onShareAppMessage 才可以。如果项目中对页面分享的需求比较复杂点，那么默认的自定义分享会很麻烦的，而且还不一定能满足我们的需求，因此全局自定义分享配置的实现就非常有必要了。
+- 全局分享
+```js
+/**
+ * 全局分享配置，页面无需开启分享
+ * 使用隐式页面函数进行页面分享配置
+ * 使用隐式路由获取当前页面路由，并根据路由来进行全局分享、自定义分享
+ */
+// app.js
+!function(){
+    // 获取页面配置并进行页面分享配置
+    var PageTmp = Page; // 保存原有的 Page 函数到 PageTmp 变量中
+    Page = function(pageConfig){ // 重写 Page 方法
+        // 1. 获取当前页面路由
+        let routerUrl = "";
+        wx.onAppRoute(function(){ // app.js 中需要在隐式路由中才能用 getCurrentPages() 获取到页面路由
+            let pages = getCurrentPages(), // 获取路由栈信息
+                view = pages[pages.length - 1]; // 获取当前页面路由信息
+            routerUrl = view.route;
+        })
+        // 2. 全局开启分享配置(合并配置，页面内配置可覆盖全局配置)
+        pageConfig = Object.assign({
+            onShareAppMessage: function(){
+                // 根据不同路由设置不同分享内容（微信小程序分享自带参数，如非特例，不需配置分享路径）
+                let shareInfo = {};
+                let noGlobalSharePages=[
+                    "pages/logs/logs"
+                ];
+                // 全局分享配置，如部分页面需要页面默认分享或自定义分享可以单独判断处理
+                if(noGlobalSharePages.includes(routerUrl)){
+                    shareInfo = {
+                        title: "自定义全局分享",
+                        // imageUrl: wx.getStorageSync("shareUrl")
+                    }
+                }
+                return shareInfo;
+            }
+        }, pageConfig);
+        // 配置页面模板
+        PageTmp(pageConfig);
+    }
+}();
+```
+
+> 全局分享的代码逻辑：
+> 1. 保存全局 Page 函数给 PageTmp；
+> 2. 重写全局 Page 函数，在函数内部将需要的全局配置如 分享 等功能，通过 Object.assign() 函数，合并为新的配置项并赋值给原配置项；
+> 3. 在函数内末尾调用之前保存的 PageTmp 方法，注意 PageTmp 方法和已经被重写的 Page 方法是不同的，PageTmp 是原来的 Page 方法，包含了执行上下文
+> 4. 执行：当我们访问首页时候，会执行 Page({}) 方法，此时 Page 方法已经被我们重写了，内部实现如上，在新 Page 函数的执行末尾去执行 PageTmp 也就是原 Page 方法。
+
+- 自定义分享
+```js
+// home.js
+Page({
+    onShow: function () { // 仅支持分享，不支持自定义
+        wx.showShareMenu({
+            withShareTicket: true, // 是否使用带 shareTicket 的转发详情
+            menus: ['shareAppMessage', 'shareTimeline']
+        })
+    },
+    onShareAppMessage() { // 支持分享朋友自定义
+        const promise = new Promise(resolve => {
+            setTimeout(() => {
+                resolve({
+                    title: '自定义转发标题'
+                })
+            }, 2000)
+        })
+        return {
+            title: '自定义转发标题',
+            path: '/page/user?id=123',
+            promise 
+        }
+    },
+    onShareTimeline() { // 支持分享朋友圈自定义
+        const promise = new Promise(resolve => {
+            setTimeout(() => {
+                resolve({
+                    title: '自定义转发标题'
+                })
+            }, 2000)
+        })
+        return {
+            title: '自定义转发标题',
+            path: '/page/user?id=123',
+            promise 
+        }
+    }
+})
+
+```
+
+### 2. 小程序样式中不允许小程序路径
+微信小程序 wxss 文件里使用本地相对路径运行时报错，小程序样式中不允许小程序路径；因此可以使用图片的网络路径或者转换为 base64。
+
+### 3. 审核失败，不符合登录流程规范
+例如不能在首页，在没有引导用户体验小程序之前就要求登录，也就是不能有登录字眼，除非明确告知用户为何需要登录（例如大学校园小程序）也可避免审核失败问题。
+
+### 4. px 和 rpx 的区别
+- px是像素单位，表示屏幕上的一个点，通常用来表示固定尺寸的元素，例如图片、边框等。在微信小程序中，1px等于屏幕的物理像素，不同的设备可能具有不同的物理分辨率，因此在不同的设备上，使用相同的px值显示的大小可能会不同。
+- rpx是相对长度单位，表示屏幕宽度的1/750，用来适配不同尺寸的设备。在微信小程序中，1rpx等于屏幕宽度的1/750，因此使用rpx可以实现在不同尺寸的设备上以相同的比例显示。例如，如果将一个元素的宽度设置为150rpx，则在屏幕宽度为375px的设备上，该元素的宽度将为150/750*375=75px，在屏幕宽度为750px的设备上，该元素的宽度将为150px。
+
+因此，当需要适配不同尺寸的设备时，建议使用rpx作为长度单位。在固定尺寸的元素上，可以使用px作为长度单位。
