--- a/docs/front/react/思考.md
+++ b/docs/front/react/思考.md
@@ -1,4 +1,4 @@
-# 问题 & 思考
+# React 问题&思考
 
 ### 1、react中onClick调用自定义函数时this的指向问题
 `思考：为什么通过onClick事件调用自定义函数时函数内this指向为undefined, 而render里的this指向却是组件实例对象?`
